<resources>
    <string name="app_name">GestAlunos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>

    // # Shared Preferences
    <string name="SH_USERNAME">amsi.dei.estg.ipleiria.pt.recursoshumanos.username</string>
    <string name="SH_PASSWORD">amsi.dei.estg.ipleiria.pt.recursoshumanos.password</string>
    <string name="SH_TOKEN">amsi.dei.estg.ipleiria.pt.recursoshumanos.token</string>

    //Start APP Activity
    <string name="bt_login">Login</string>

    //Login Activity

    <string name="bt_entrar">Entrar</string>

    //Start Activity
    <string name="calendario">Calendário</string>
    <string name="horario">Horário</string>
    <string name="forum">Fórum</string>
    <string name="configuracoes">Configurações</string>
    <string name="estatisticas">Estatisticas</string>
    <string name="dialog_title">ola</string>
    <string name="dialog_message">adeus</string>
    <string name="nome_contacto">Geral</string>
    <string name="titulo_contacto">Contactos</string>
    <string name="titulo_login">Login</string>
    <string name="titulo_informacoes">Informações</string>
    <string name="nav_settings">Configuração</string>
    <string name="nav_notificacoes">Notificações</string>
    <string name="nav_turno">Turnos</string>
    <string name="nav_unidadesCurriculares">Unidades Curriculares</string>
    <string name="nav_pagamentos">Pagamentos</string>
    <string name="nav_forum">Forum</string>
    <string name="nav_calendario">Calendário</string>
    <string name="nav_horario">Horario</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_inicio">Inicio</string>

    //Fragmento Calendario
    <string name="primeiro_dia_semana">S</string>
    <string name="segundo_dia_semana">T</string>
    <string name="terceiro_dia_semana">Q</string>
    <string name="quarto_dia_semana">Q</string>
    <string name="quinto_dia_semana">S</string>
    <string name="sexto_dia_semana">S</string>
    <string name="setimo_dia_semana">D</string>


    //Fragmento Pagamentos
    <string name="tv_valor">Valor</string>
    <string name="tv_dataLimite">Data Limite</string>
    <string name="tv_status">Estado</string>
    <string name="item_valor">valor</string>
    <string name="item_dataLimite">data</string>
    <string name="item_status">status</string>

    //Activity Dados Autenticacao
    <string name="tv_password_existente">Password existente:</string>
    <string name="tv_nova_password">Nova Password:</string>
    <string name="tv_conf_nova_password">Conf nova password:</string>

    //Activity Dados Academicos
    <string name="tv_n_estudante">Nº</string>
    <string name="tv_curso">Curso</string>
    <string name="tv_coordenador">Coordenador</string>
    <string name="tv_ano_lectivo">Ano Lectivo</string>

    //Activity Dados Pessoais
    <string name="tv_nome">Nome</string>
    <string name="tv_email">Email</string>
    <string name="tv_genero">Género</string>
    <string name="tv_telemovel">Telemóvel</string>
    <string name="tv_data_nascimento">Data Nascimento</string>


    //Fragment Perfil
    <string name="tv_dados_pessoais">Dados Pessoais</string>
    <string name="tv_dados_academicos">Dados Académicos</string>
    <string name="tv_dados_autenticacao">Dados Autenticação</string>


    //Fragment Horario
    <string name="tv_1_semana">Segunda-Feira</string>
    <string name="tv_2_semana">Terça-Feira</string>
    <string name="tv_3_semana">Quarta-Feira</string>
    <string name="tv_4_semana">Quinta-Feira</string>
    <string name="tv_5_semana">Sexta-Feira</string>
    <string name="btn_cores">Cores</string>
    <string name="btn_feedback">Ajuda e Feedback</string>
    <string name="btn_traduzir">Traduzir</string>

    //Fragment Unidades Curriculares
    <string name="tv_detalhes">Detalhes</string>

    <string name="tv_hora">Hora</string>
    <string name="tv_uc">Unidade Curricular</string>
    <string name="tv_sala">Sala</string>

    <string name="item_hora_inicio">Inicio</string>
    <string name="item_hora_fim">Fim</string>
    <string name="item_uc">Unidade Curricular</string>
    <string name="item_sala">Sala</string>
    <string name="tv_hora_inicio">Entrada</string>
    <string name="tv_hora_fim">Saida</string>
    <string name="tv_professor">Professor</string>


    <string name="username_invalido">Username Inválido</string>
    <string name="password_invalida">Password Invalida</string>
    <string name="relembrar_dados_autentica_o">Relembrar</string>
    <string name="tv_ano">Ano</string>
    <string name="edt_username">Username</string>
</resources>
