<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:theme="@style/Theme.AppCompat.Light"    tools:showIn="navigation_view">    <group android:checkableBehavior="single">        <item android:id="@+id/nav_inicio"            android:icon="@drawable/ic_nav_home"            android:title="@string/nav_inicio"/>        <item android:id="@+id/nav_perfil"            android:icon="@drawable/ic_nav_perfil"            android:title="@string/nav_perfil"/>        <item android:id="@+id/nav_horario"            android:icon="@drawable/ic_nav_horario"            android:title="@string/nav_horario" />        <item android:id="@+id/nav_calendario"            android:icon="@drawable/ic_nav_calendario"            android:title="@string/nav_calendario"/>        <item android:id="@+id/nav_forum"            android:icon="@drawable/ic_nav_forum"            android:title="@string/nav_forum"/>        <item android:id="@+id/nav_pagamentos"            android:icon="@drawable/ic_nav_payment"            android:title="@string/nav_pagamentos"/>        <item android:id="@+id/nav_turno"            android:icon="@drawable/ic_nav_turnos"            android:title="@string/nav_unidadesCurriculares"/>        <item android:id="@+id/nav_unidades_curriculares"            android:icon="@drawable/ic_nav_unidades_currculares"            android:title="@string/nav_turno"/>        <item android:id="@+id/nav_notificacoes"            android:icon="@drawable/ic_nav_notificacoes"            android:title="@string/nav_notificacoes"/>        <item android:id="@+id/nav_configuracoes"            android:icon="@drawable/ic_nav_configuracoes"            android:title="@string/nav_settings"/>    </group>    <item android:title="Comunicação" android:checkableBehavior="single">        <menu>            <item android:id="@+id/nav_email"                android:icon="@drawable/ic_nav_email"                android:title="Email"/>        </menu>    </item>    <item>        <menu>            <item android:id="@+id/nav_sair"                android:menuCategory="container"                android:icon="@drawable/ic_exit"                android:title="Sair"/>        </menu>    </item></menu>