<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/col_data"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_hora_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/item_hora_inicio"
                android:textSize="@dimen/item_texto"
                android:textColor="@color/texto_horario"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_hora_fim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/item_hora_fim"
                android:textSize="@dimen/item_texto"
                android:textColor="@color/texto_horario"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/col_dataLimit"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_item_uc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/item_uc"
            android:textAlignment="center"
            android:textSize="@dimen/item_texto"
            android:textColor="@color/texto_horario"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/col_status"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_item_sala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/item_sala"
            android:textSize="@dimen/item_texto"
            android:textColor="@color/texto_horario"/>

    </LinearLayout>

</LinearLayout>