<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/header">

    <LinearLayout
        android:id="@+id/col_indicador"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_seta_indicadora"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/col_valor"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_valor"
            android:textSize="@dimen/header_texto"
            android:textStyle="bold"
            android:textColor="@color/texto"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/col_dataLimit"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_dataLimite"
            android:textSize="@dimen/header_texto"
            android:textStyle="bold"
            android:textColor="@color/texto"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/col_status"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_status"
            android:textSize="@dimen/header_texto"
            android:textStyle="bold"
            android:textColor="@color/texto"/>

    </LinearLayout>

</LinearLayout>