<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86C6FF"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context="amsi.dei.estg.ipleiria.pt.recursoshumanos.Views.LoginActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/titulo_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/titulo_login"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/ident_user"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_below="@id/titulo_login"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/img_identificacao" />

        <LinearLayout android:id="@+id/container_username"
            android:layout_width="wrap_content"
            android:layout_below="@id/ident_user"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_content"
                android:drawableLeft="@drawable/tv_email"
                android:ems="20"
                android:gravity="center"
                android:hint="@string/edt_username"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout android:id="@+id/container_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_username"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/ic_content"
                android:drawableLeft="@drawable/tv_password"
                android:gravity="center"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:hint=" Password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>



    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btn_IrLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rectangle"
            android:gravity="center"
            android:text="@string/bt_login"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_retornar_inicio"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/oval"
        android:onClick="onClickRetornar"
        android:padding="19dp"
        android:src="@drawable/ic_retornar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_btn_login"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>