<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0E0FF"
    tools:context=".Views.NovaPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/img_password"
            android:alpha="0.10"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout android:id="@+id/container_antigaPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_password_existente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_password_existente"
                    android:textSize="20sp"
                    android:textColor="#000000"/>

                <EditText
                    android:id="@+id/edt_password_existente"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@drawable/ic_content"
                    android:drawableLeft="@drawable/ic_password_velha"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout android:id="@+id/container_nova_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_antigaPassword"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/tv_nova_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nova_password"
                    android:textSize="20sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_nova_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="#000000"
                        android:drawableLeft="@drawable/ic_password_nova"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout android:id="@+id/container_conf_nova_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_nova_password"
                android:orientation="vertical"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_conf_nova_password"
                    android:textSize="20sp"
                    android:textColor="#000000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_conf_nova_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/ic_content"
                        android:drawableLeft="@drawable/ic_password_nova"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="#000000"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout android:id="@+id/container_confirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_conf_nova_password"
                android:orientation="vertical"
                android:layout_marginTop="80dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_retangular"
                    android:text="Confirmar"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"/>

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>